# archgenerator

./: .gitignore  README.md  lint.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: automerge.yml  lint.yml
archgenerator/: configurator.py  consts.py  models.py  platform.py  serializer.py  utils.py  web.py  workflow.py
archgenerator/cli/: __main__.py  entry_point.py
archgenerator/docs/: commit.py  config.py  consts.py  context.py  generator.py  md.py  names.py
archgenerator/ext/codewars/: __init__.py  config.py  context.py  fetcher.py  platform.py
archgenerator/ext/leetcode/: __init__.py  config.py  context.py  fetcher.py  platform.py
archgenerator/fetchers/: codewars.py  context.py  leetcode.py
archgenerator/scrapper/: __init__.py  declarative.py  elements.py
