[tool.poetry]
name = "archgenerator"
version = "0.2.0"
description = "Generator for coding platform tasks."
authors = ["Yurii Karabas <1998uriyyo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.14.3"
beautifulsoup4 = "^4.9.1"
more-itertools = "^8.5.0"
pydantic = "^1.6.1"
GitPython = "^3.1.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[tool.poetry.scripts]
archgenerator = "archgenerator.cli.__main__:main_cli"

[tool.poetry.plugins.archgenerator]
codewars = "archgenerator.ext.codewars:CodeWarsPlatform"
leetcode = "archgenerator.ext.leetcode:LeetCodePlatform"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"