[tool.poetry]
name = "archgenerator"
version = "0.4.0"
description = "Generator for coding platform tasks."
authors = ["Yurii Karabas <1998uriyyo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.2"
beautifulsoup4 = "^4.12.3"
more-itertools = "^10.5.0"
pydantic = "^2.9"
gitpython = "^3.1.43"
click = "^8.1.7"
selene = "^1.0.2"
webdriver-manager = "^4.0.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.7.0"
mypy = "^1.12"
types-setuptools = "^75.2.0.20241019"

[tool.poetry.scripts]
archgenerator = "archgenerator.cli.__main__:main_cli"

[tool.poetry.plugins.archgenerator]
codewars = "archgenerator.ext.codewars:CodeWarsPlatform"
leetcode = "archgenerator.ext.leetcode:LeetCodePlatform"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''


[tool.ruff]
line-length = 120
select = ["E", "F"]
ignore = []
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".venv",
]
per-file-ignores = { }
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py311"

[tool.ruff.mccabe]
max-complexity = 10

[tool.mypy]
python_version = 3.11
strict = true
follow_imports = "normal"
ignore_missing_imports = true
no_implicit_reexport = false
show_column_numbers= true
show_error_codes= true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
